[package]
name = "chat-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
ctrlc = "3.2.4"
itoa = "1.0.5"
cursor = { git = "https://github.com/QnnOkabayashi/rust-course-utils" }
readbuf = { git = "https://github.com/QnnOkabayashi/rust-course-utils" }
